verificaciones en el archivo final, si tienen NAs

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,7 +10,7 @@ book:
     - index.qmd
     - intro.qmd
     - 2_Preprocessing_CAMDApublicdata.qmd
-    - 3_Download_SRAdata.qmd
+    #- 3_Download_SRAdata.qmd
     - 4_inpufile_MLandDL.qmd
      # Information
   repo-url: https://github.com/EveliaCoss/CAMDA2025_metadatos # link de Github
